# VINS_Fusion_ros2

./: .gitignore  .gitmodules  README.md  vins_fusion.rviz
camera_models/: CMakeLists.txt
config/: vins_fusion.rviz
config/mujoco_quadrotor/: cam0.yaml  cam1.yaml  mujoco_lidar_imu_config.yaml  mujoco_mono_imu_config.yaml  mujoco_stereo_imu_config.yaml
docs/: Makefile  requirements.txt
docs/source/: architecture.rst  codebase.rst  conf.py  euroc_demo.rst  evaluation.rst  index.rst  paper_to_code_walkthrough.rst  quickstart.rst  troubleshooting.rst
docs/source/_static/: custom.css
global_fusion/: CMakeLists.txt  package.xml
global_fusion/src/: globalOptNode.cpp  global_fusion_node_main.cpp  runner.hpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: loop_fusion_node_main.cpp  pose_graph_node.cpp  runner.hpp
scripts/: analyze_recorded_estimation_bag.py  build_ceres.sh  build_docs.sh  evaluate_slam_trajectory.py  run_euroc_component_benchmark.sh  run_euroc_demo.sh  run_euroc_tmux.sh
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc_stereo_imu_demo.launch.py
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  kitti_gps_test_main.cpp  kitti_odom_test_main.cpp  rosNodeTest.cpp  runners.hpp  vins_node_main.cpp
vins_estimator/src/estimator/: estimator.cpp  parameters.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
